==> sabbiolino80/Grbl_Esp32/main/limits.cpp <==
#include "grbl.h"
#define ESP_INTR_FLAG_DEFAULT 0
#define HOMING_AXIS_SEARCH_SCALAR  1.1 // Must be > 1 to ensure limit switch will be engaged.
#define HOMING_AXIS_LOCATE_SCALAR  5.0 // Must be > 1 to ensure limit switch is cleared.

void limits_init()
{

#ifndef DISABLE_LIMIT_PIN_PULL_UP
#ifdef X_LIMIT_PIN
	gpio_set_direction(X_LIMIT_PIN, GPIO_MODE_INPUT);  // input with pullup
	gpio_set_pull_mode(X_LIMIT_PIN, GPIO_PULLUP_ONLY);
#endif
#ifdef Y_LIMIT_PIN
	gpio_set_direction(Y_LIMIT_PIN, GPIO_MODE_INPUT);
	gpio_set_pull_mode(Y_LIMIT_PIN, GPIO_PULLUP_ONLY);
#endif
#else
#ifdef X_LIMIT_PIN
  gpio_set_direction(X_LIMIT_PIN, GPIO_MODE_DEF_INPUT); // input no pullup
#endif
#ifdef Y_LIMIT_PIN
  gpio_set_direction(Y_LIMIT_PIN, GPIO_MODE_DEF_INPUT);
#endif
#endif

	if (bit_istrue(settings.flags, BITFLAG_HARD_LIMIT_ENABLE))
	{
		// attach interrupt to them
		gpio_install_isr_service(ESP_INTR_FLAG_DEFAULT);
		//gpio_isr_register(isr_limit_switches, (void *)pin?, 0, NULL);

#ifdef X_LIMIT_PIN
		//attachInterrupt(digitalPinToInterrupt(X_LIMIT_PIN), isr_limit_switches,CHANGE);
		gpio_set_intr_type(X_LIMIT_PIN, GPIO_INTR_ANYEDGE);
		gpio_isr_handler_add(X_LIMIT_PIN, isr_limit_switches, (void *) X_LIMIT_PIN); //(void*) X_LIMIT_PIN
#endif
#ifdef Y_LIMIT_PIN
		//attachInterrupt(digitalPinToInterrupt(Y_LIMIT_PIN), isr_limit_switches,CHANGE);
		gpio_set_intr_type(Y_LIMIT_PIN, GPIO_INTR_ANYEDGE);
		gpio_isr_handler_add(Y_LIMIT_PIN, isr_limit_switches, NULL); //(void*) Y_LIMIT_PIN
#endif
	}
	else
	{
		limits_disable();
	}

	// TODO Debounce
	/*
	 #ifdef ENABLE_SOFTWARE_DEBOUNCE
	 MCUSR &= ~(1<<WDRF);
	 WDTCSR |= (1<<WDCE) | (1<<WDE);
	 WDTCSR = (1<<WDP0); // Set time-out at ~32msec.
	 #endif
	 */
}

void limits_disable()
{
	gpio_isr_handler_remove(X_LIMIT_PIN);
	gpio_isr_handler_remove(Y_LIMIT_PIN);
}

uint8_t limits_get_state()
{
    uint8_t limit_state = 0;
    uint8_t pin = 0;

#ifdef X_LIMIT_PIN
	pin += gpio_get_level(X_LIMIT_PIN);
#endif
#ifdef Y_LIMIT_PIN
	pin += (gpio_get_level(Y_LIMIT_PIN) << Y_AXIS);
#endif

#ifdef INVERT_LIMIT_PIN_MASK // not normally used..unless you have both normal and inverted switches
  pin ^= INVERT_LIMIT_PIN_MASK;
#endif

	if (bit_istrue(settings.flags, BITFLAG_INVERT_LIMIT_PINS))
	{
		pin ^= LIMIT_MASK;
	}

	if (pin)
	{
        uint8_t idx;
		for (idx = 0; idx < N_AXIS; idx++)
		{
			if (pin & get_limit_pin_mask(idx))
			{
				limit_state |= (1 << idx);
			}
		}
	}

	return (limit_state);

}
