==> iwasz/zephyr-grbl/deps/gnea-grbl/grbl/limits.c <==
#include "grbl.h"
#include <zephyr/drivers/gpio.h>
#include <zephyr/device.h>
#include <zephyr/devicetree.h>
#include <zephyr/kernel.h>
#include <zephyr/logging/log.h>
#include <zephyr/sys/printk.h>
  #define HOMING_AXIS_SEARCH_SCALAR  1.5 // Must be > 1 to ensure limit switch will be engaged.
  #define HOMING_AXIS_LOCATE_SCALAR  5.0 // Must be > 1 to ensure limit switch is cleared.
  #define DUAL_AXIS_CHECK_DISABLE     0  // Must be zero
  #define DUAL_AXIS_CHECK_ENABLE      bit(0)
  #define DUAL_AXIS_CHECK_TRIGGER_1   bit(1)
  #define DUAL_AXIS_CHECK_TRIGGER_2   bit(2)

void limits_init()
{
/*
  Left for reference.
  LIMIT_DDR &= ~(LIMIT_MASK); // Set as input pins

  #ifdef DISABLE_LIMIT_PIN_PULL_UP
    LIMIT_PORT &= ~(LIMIT_MASK); // Normal low operation. Requires external pull-down.
  #else
    LIMIT_PORT |= (LIMIT_MASK);  // Enable internal pull-up resistors. Normal high operation.
  #endif
*/
  static bool initialized = false;

  if (initialized) {
    return;
  }

        int ret = 0;

        if ((ret = gpio_pin_configure_dt (&leftSwitch,  GPIO_INPUT)) < 0) {
                LOG_ERR ("leftSwitch configure fail %d", ret);
                return;
        }

        if ((ret = gpio_pin_interrupt_configure_dt (&leftSwitch, GPIO_INT_EDGE_TO_ACTIVE)) != 0) {
                LOG_ERR ("Error %d: leftSwitch interrupt", ret);
                return;
        }

        /*--------------------------------------------------------------------------*/

        if ((ret = gpio_pin_configure_dt (&rightSwitch,  GPIO_INPUT)) < 0) {
                LOG_ERR ("rightSwitch configure fail %d", ret);
                return;
        }

        if ((ret = gpio_pin_interrupt_configure_dt (&rightSwitch, GPIO_INT_EDGE_TO_ACTIVE)) != 0) {
                LOG_ERR ("Error %d: rightSwitch interrupt", ret);
                return;
        }


        /*--------------------------------------------------------------------------*/

      if ((ret = gpio_pin_configure_dt (&topSwitch,  GPIO_INPUT)) < 0) {
                LOG_ERR ("topSwitch configure fail %d", ret);
                return;
        }

        if ((ret = gpio_pin_interrupt_configure_dt (&topSwitch, GPIO_INT_EDGE_TO_ACTIVE)) != 0) {
                LOG_ERR ("Error %d: topSwitch interrupt", ret);
                return;
        }


        /*--------------------------------------------------------------------------*/

      if ((ret = gpio_pin_configure_dt (&bottomSwitch,  GPIO_INPUT)) < 0) {
                LOG_ERR ("bottomSwitch configure fail %d", ret);
                return;
        }

        if ((ret = gpio_pin_interrupt_configure_dt (&bottomSwitch, GPIO_INT_EDGE_TO_ACTIVE)) != 0) {
                LOG_ERR ("Error %d: bottomSwitch interrupt", ret);
                return;
        }


        /*--------------------------------------------------------------------------*/


  /*
  if (bit_istrue(settings.flags,BITFLAG_HARD_LIMIT_ENABLE)) {
    LIMIT_PCMSK |= LIMIT_MASK; // Enable specific pins of the Pin Change Interrupt
    PCICR |= (1 << LIMIT_INT); // Enable Pin Change Interrupt
  } else {
    limits_disable();
  }
  */

#ifdef ENABLE_SOFTWARE_DEBOUNCE
        k_timer_init (&limitSwitchDebounceTimer, limitSwitchDebounceCallback, NULL);
#endif

  if (bit_istrue(settings.flags,BITFLAG_HARD_LIMIT_ENABLE)) {
        gpio_init_callback (&buttonCbDataLeft, limitSwitchPressed, leftSwitch.pin);
        gpio_add_callback_dt (&leftSwitch, &buttonCbDataLeft);

        gpio_init_callback (&buttonCbDataRight, limitSwitchPressed, rightSwitch.pin);
        gpio_add_callback_dt (&rightSwitch, &buttonCbDataRight);

        gpio_init_callback (&buttonCbDataTop, limitSwitchPressed, topSwitch.pin);
        gpio_add_callback_dt (&topSwitch, &buttonCbDataTop);

        gpio_init_callback (&buttonCbDataBottom, limitSwitchPressed, bottomSwitch.pin);
        gpio_add_callback_dt (&bottomSwitch, &buttonCbDataBottom);

        // gpio_init_callback (&motor1StallCbData, switchPressed, BIT (MOTORX_STALL_PIN));
        // gpio_add_callback (motor1Stall, &motor1StallCbData);

        // gpio_init_callback (&motor2StallCbData, switchPressed, BIT (MOTORY_STALL_PIN));
        // gpio_add_callback (motor2Stall, &motor2StallCbData);
  } else {
    limits_disable();
  }

  initialized = true;

  /*
  #ifdef ENABLE_SOFTWARE_DEBOUNCE
    MCUSR &= ~(1<<WDRF);
    WDTCSR |= (1<<WDCE) | (1<<WDE);
    WDTCSR = (1<<WDP0); // Set time-out at ~32msec.
  #endif
  */
}

void limits_disable()
{
  /*
  LIMIT_PCMSK &= ~LIMIT_MASK;  // Disable specific pins of the Pin Change Interrupt
  PCICR &= ~(1 << LIMIT_INT);  // Disable Pin Change Interrupt
  */
  gpio_remove_callback_dt (&leftSwitch, &buttonCbDataLeft);
  gpio_remove_callback_dt (&rightSwitch, &buttonCbDataRight);
  gpio_remove_callback_dt (&topSwitch, &buttonCbDataTop);
  gpio_remove_callback_dt (&bottomSwitch, &buttonCbDataBottom);
}

uint8_t limits_get_state()
{
  uint8_t limit_state = 0;

  // TODO It seems that GRBL needs only one switch per axis, not 2 as I thought.
  bool axisX = gpio_pin_get_dt (&leftSwitch) || gpio_pin_get_dt (&rightSwitch);
  bool axisY = gpio_pin_get_dt (&topSwitch) || gpio_pin_get_dt (&bottomSwitch);
  bool axisZ = 0; // TODO make room for this in the overlay and elsewhere.

  uint8_t pin = ((axisX<<X_LIMIT_BIT)|(axisY<<Y_LIMIT_BIT)|(axisZ<<Z_LIMIT_BIT));

  #ifdef INVERT_LIMIT_PIN_MASK
    pin ^= INVERT_LIMIT_PIN_MASK;
  #endif

  // In zephyr there is discrepancy between pin "active / inactive" state and
  // physical "high / low" states. Here we operate on the higher level "active / inactive"
  // Which means, that we are always checking for gpio_pin_get returning TRUE.
  // The user can then configure in the overlay file if he wants those pins to
  // operate in positive or negative logic. Therefore below bit_isfalse has been
  // changed to bit_istrue (originally they worked on the "physical" level which was
  // 1 by default and 0 on limit switch triggered).
  if (bit_istrue(settings.flags,BITFLAG_INVERT_LIMIT_PINS)) { pin ^= LIMIT_MASK; }
  if (pin) {
    uint8_t idx;
    for (idx=0; idx<N_AXIS; idx++) {
      if (pin & get_limit_pin_mask(idx)) { limit_state |= (1 << idx); }
    }
    #ifdef ENABLE_DUAL_AXIS
      if (pin & (1<<DUAL_LIMIT_BIT)) { limit_state |= (1 << N_AXIS); }
    #endif
  }

  return(limit_state);
}
